# react-native-pharma-scanner

./: .env.example  .gitignore  .gitmodules  App.tsx  README.md  app.json  jest.config.js  metro.config.js  nitro.json  package-lock.json  package.json  react-native-pharma-scanner.podspec  react-native.config.js  tsconfig.build.json  tsconfig.json  yaml-transformer.js
.agent/workflows/: execute.md  plan.md
__mocks__/: react-native-config.ts  react-native-image-picker.ts  react-native-nitro-modules.ts
__tests__/: App.test.tsx  documentTypes.test.ts  enrichResult.test.ts  errors.test.ts  mistral.test.ts  scannerModule.test.ts  validation.test.ts
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/reactnativepharmascanner/: MainActivity.kt  MainApplication.kt
docs/: sprint-4-barcode-qr-scanning.md
example/: .env.example  App.tsx  metro.config.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/ReactNativePharmaScanner/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ReactNativePharmaScanner.xcodeproj/: project.pbxproj
example/ios/ReactNativePharmaScanner.xcodeproj/xcshareddata/xcschemes/: ReactNativePharmaScanner.xcscheme
example/ios/ReactNativePharmaScanner.xcworkspace/: contents.xcworkspacedata
ios/: BarcodeScanner.swift  CameraManager.swift  DocumentDetector.swift  DocumentExtractor.swift  DocumentOcrProcessor.swift  DocumentPrompts.swift  DocumentScannerManager.swift  FoundationModelInvoiceExtractor.swift  HybridPharmaScanner.swift  ImageProcessor.swift  ImageQualityAssessor.swift  InvoiceParser.swift  LLMExtractor.swift  LlamaCppManager.swift  NetworkMonitor.swift  OcrProcessor.swift  PharmaScannerCameraView.swift  PharmaScannerCameraViewManager.m  PharmaScannerCameraViewManager.swift  Podfile  StructuredDocumentAnalyzer.swift  StructuredJsonBuilder.swift  TemplateExtractor.swift
ios/ReactNativePharmaScanner/: Info.plist  ReactNativePharmaScannerBridge.h
ios/ReactNativePharmaScanner.xcodeproj/: project.pbxproj
ios/llama.xcframework/ios-arm64/llama.framework/: llama
patches/: react-native+0.85.3.patch
pharmascanner/: CMakeLists.txt  build.gradle
pharmascanner/src/main/cpp/: llama_bridge.cpp
pharmascanner/src/main/java/com/margelo/nitro/PharmaScanner/: ActivityProvider.kt  BarcodeOverlayView.kt  BarcodeScannerManager.kt  CameraManager.kt  DocumentDetector.kt  DocumentExtractor.kt  DocumentOverlayView.kt  DocumentScannerManager.kt  HybridPharmaScanner.kt  ImageProcessor.kt  LlamaCppManager.kt  PermissionHelper.kt  PharmaScannerCameraView.kt  PharmaScannerCameraViewManager.kt  PharmaScannerPackage.kt  PharmaScannerViewPackage.kt
src/: PharmaScannerCameraView.tsx  QRScannerScreen.tsx  document-types.ts  env.d.ts  extract.ts  index.ts  mistral.ts  structured-document.ts
src/providers/: ClaudeProvider.ts  LocalLlmProvider.ts  MistralProvider.ts  OpenAIProvider.ts  index.ts  types.ts
src/schemas/: built-in.ts  index.ts  registry.ts  types.ts
src/specs/: PharmaScanner.nitro.ts  types.nitro.ts
src/template-engine/: confidence.ts  engine.ts  field-extractors.ts  index.ts  item-parser.ts  number-parser.ts  section-finder.ts  text-utils.ts  types.ts
src/templates/: generic.yaml  index.ts  invoice.yaml  prescription.yaml  receipt.yaml
src/utils/: confidence.ts  enrichResult.ts  errors.ts  image.ts  json.ts  validation.ts
