project(PharmaScannerCxx)
cmake_minimum_required(VERSION 3.9.0)

set(PACKAGE_NAME PharmaScannerCxx)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_STANDARD 20)

add_library(${PACKAGE_NAME} SHARED
    src/main/cpp/cpp-adapter.cpp
)

# Pulls in all nitrogen-generated sources and links fbjni/ReactAndroid/NitroModules
include(${CMAKE_SOURCE_DIR}/../nitrogen/generated/android/PharmaScannerCxx+autolinking.cmake)

find_library(LOG_LIB log)

target_link_libraries(
    ${PACKAGE_NAME}
    ${LOG_LIB}
    android
)
